// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page layout component should render with children when passed 1`] = `
<React.Fragment>
  <Header
    logoLinkTitle=""
    menu={
      Array [
        Object {
          "label": "Logout",
          "target": "/",
        },
      ]
    }
    propositionHeader="Service Name"
    propositionHeaderLink="/"
    service="GOV.UK"
    serviceLink="https://www.gov.uk"
  />
  <Body
    phaseBanner={
      Object {
        "isVisible": false,
      }
    }
  >
    Inside my layout
  </Body>
</React.Fragment>
`;

exports[`Page layout component should render with default props 1`] = `
<React.Fragment>
  <Header
    logoLinkTitle=""
    menu={
      Array [
        Object {
          "label": "Logout",
          "target": "/",
        },
      ]
    }
    propositionHeader="Service Name"
    propositionHeaderLink="/"
    service="GOV.UK"
    serviceLink="https://www.gov.uk"
  />
  <Body
    phaseBanner={
      Object {
        "isVisible": false,
      }
    }
  />
</React.Fragment>
`;

exports[`Page layout component should render with footer when set 1`] = `
<React.Fragment>
  <Header
    logoLinkTitle=""
    menu={
      Array [
        Object {
          "label": "Logout",
          "target": "/",
        },
      ]
    }
    propositionHeader="Service Name"
    propositionHeaderLink="/"
    service="GOV.UK"
    serviceLink="https://www.gov.uk"
  />
  <Body
    phaseBanner={
      Object {
        "isVisible": false,
      }
    }
  />
  <Footer
    isVisible={true}
    links={Array []}
  />
</React.Fragment>
`;
